сделала адаптивный header

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel = "stylesheet" href = "pages/index.css">
   <title>Место</title>
 </head>
-<body>
+<body class = "root">
+  <div class = "page">
+    <header class = "header">
+      <img class = "header__logo" src = "./images/header__logo.svg" alt = "логотип место">
+      <div class = "header__line"></div>
+    </header>
+    <main class = "main">
+      <section>
+
+      </section>
+
+    </main>
+    <footer class = "footer">
+
+    </footer>
+  </div>
   
 </body>
 </html>
