--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
       <img class = "header__logo" src = "./images/header__logo.svg" alt = "логотип место">
       <div class = "header__line"></div>
     </header>
-    <main class = "main">
-      <section>
 
+    <main class = "main">
+      <section class = "profile">
+        <img class = "profile__avatar" src = "./images/profile__avatar.jpg" alt = "автарка профиля">
+        <div class = "profile__info">
+          <h1 class = "profile__name">Жак-Ив Кусто</h1>
+          <button class = "profile__edit-button"></button>
+          <p class = "profile__description">Исследователь океана</p>
+        </div>
+        <button class = "profile__add-button"></button>
       </section>
 
     </main>
+
     <footer class = "footer">
 
     </footer>
