--- a/index.html
+++ b/index.html
@@ -24,6 +24,51 @@
         <button class = "profile__add-button"></button>
       </section>
 
+      <section class = "elements">
+        <div class = "elements__element">
+          <img class = "elements__photo" src = "./images/1.jpg" alt = "">
+          <div class = "elements__info">
+            <p class = "elements__title">Карачаевск</p>
+            <button class = "elements__like-button"></button>
+          </div>
+        </div>
+        <div class = "elements__element">
+          <img class = "elements__photo" src = "./images/2.jpg" alt = "">
+          <div class = "elements__info">
+            <p class = "elements__title">Гора Эльбрус</p>
+            <button class = "elements__like-button"></button>
+          </div>
+        </div>
+        <div class = "elements__element">
+          <img class = "elements__photo" src = "./images/3.jpg" alt = "">
+          <div class = "elements__info">
+            <p class = "elements__title">Домбай</p>
+            <button class = "elements__like-button"></button>
+          </div>
+        </div>
+        <div class = "elements__element">
+          <img class = "elements__photo" src = "./images/4.jpg" alt = "">
+          <div class = "elements__info">
+            <p class = "elements__title">Гора Эльбрус</p>
+            <button class = "elements__like-button"></button>
+          </div>
+        </div>
+        <div class = "elements__element">
+          <img class = "elements__photo" src = "./images/5.jpg" alt = "">
+          <div class = "elements__info">
+            <p class = "elements__title">Домбай</p>
+            <button class = "elements__like-button"></button>
+          </div>
+        </div>
+        <div class = "elements__element">
+          <img class = "elements__photo" src = "./images/6.jpg" alt = "">
+          <div class = "elements__info">
+            <p class = "elements__title">Карачаево-Ч...</p>
+            <button class = "elements__like-button"></button>
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <footer class = "footer">
