сделала адаптивный footer

--- a/index.html
+++ b/index.html
@@ -63,18 +63,16 @@
         <div class = "elements__element">
           <img class = "elements__photo" src = "./images/6.jpg" alt = "">
           <div class = "elements__info">
-            <p class = "elements__title">Карачаево-Ч...</p>
+            <p class = "elements__title">Карачаево-Черкесия</p>
             <button class = "elements__like-button"></button>
           </div>
         </div>
       </section>
-
     </main>
 
     <footer class = "footer">
-
+      <p class = "footer__copyright">&#169; 2022. Катя Павлова</p>
     </footer>
   </div>
-  
 </body>
 </html>
