сделала opacity для кнопок и добавила модификатор для кнопки like-button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <img class = "elements__photo" src = "./images/1.jpg" alt = "">
           <div class = "elements__info">
             <p class = "elements__title">Карачаевск</p>
-            <button class = "elements__like-button"></button>
+            <button class = "elements__like-button elements__like-button_active"></button>
           </div>
         </div>
         <div class = "elements__element">
