--- a/index.html
+++ b/index.html
@@ -68,6 +68,22 @@
           </div>
         </div>
       </section>
+
+      <section class = "popup popup_opened">
+        <div class = "popup__container">
+          <img class = "popup__close" src = "./images/popup__close.svg" alt = "">
+          <form class = "popup__form">
+            <h2 class = "popup__title">Редактировать профиль</h2>
+            <fildset class="popup__form-item">
+              <input class = "popup__form-name" type = "text" placeholder = "Имя">
+            </fildset>
+            <fildset class = "popup__form-item">
+              <input class = "popup__form-description" type = "text" placeholder = "О себе">
+            </fildset>
+            <button class = "popup__save-button">Сохранить</button>
+          </form>
+        </div>
+      </section>
     </main>
 
     <footer class = "footer">
