--- a/index.html
+++ b/index.html
@@ -90,5 +90,6 @@
       <p class = "footer__copyright">&#169; 2022. Катя Павлова</p>
     </footer>
   </div>
+  <script src = "script.js"></script>
 </body>
 </html>
