подключила js - теперь popup открывается и закрывается

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
       </section>
 
-      <section class = "popup popup_opened">
+      <section class = "popup">
         <div class = "popup__container">
           <img class = "popup__close" src = "./images/popup__close.svg" alt = "">
           <form class = "popup__form">
