js - теперь можно менять имя и о себе в профиле

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <img class = "elements__photo" src = "./images/1.jpg" alt = "">
           <div class = "elements__info">
             <p class = "elements__title">Карачаевск</p>
-            <button class = "elements__like-button elements__like-button_active"></button>
+            <button class = "elements__like-button"></button>
           </div>
         </div>
         <div class = "elements__element">
@@ -75,10 +75,12 @@
           <form class = "popup__form">
             <h2 class = "popup__title">Редактировать профиль</h2>
             <fildset class="popup__form-item">
-              <input class = "popup__form-name" type = "text" placeholder = "Имя">
+              <input class = "popup__form-name" type = "text" placeholder = "Имя" 
+                value = "Жак-Ив Кусто">
             </fildset>
             <fildset class = "popup__form-item">
-              <input class = "popup__form-description" type = "text" placeholder = "О себе">
+              <input class = "popup__form-description" type = "text" placeholder = "О себе"
+                value = "Исследователь океана">
             </fildset>
             <button class = "popup__save-button">Сохранить</button>
           </form>
