--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <section class = "popup">
         <div class = "popup__container">
-          <img class = "popup__close" src = "./images/popup__close.svg" alt = "">
+          <img class = "popup__close" src = "./images/popup__close.svg" alt = "крестик">
           <form class = "popup__form">
             <h2 class = "popup__title">Редактировать профиль</h2>
             <fildset class="popup__form-item">
