исправила ошибки валидатора

--- a/index.html
+++ b/index.html
@@ -74,14 +74,12 @@
           <img class = "popup__close" src = "./images/popup__close.svg" alt = "крестик">
           <form class = "popup__form">
             <h2 class = "popup__title">Редактировать профиль</h2>
-            <fildset class="popup__form-item">
+            <fieldset class = "popup__form-item">
               <input class = "popup__form-name" type = "text" placeholder = "Имя" 
                 value = "Жак-Ив Кусто">
-            </fildset>
-            <fildset class = "popup__form-item">
               <input class = "popup__form-description" type = "text" placeholder = "О себе"
                 value = "Исследователь океана">
-            </fildset>
+            </fieldset>
             <button class = "popup__save-button">Сохранить</button>
           </form>
         </div>
