--- a/index.html
+++ b/index.html
@@ -1,95 +1,94 @@
 <!DOCTYPE html>
-<html lang = "ru">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel = "stylesheet" href = "pages/index.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Место</title>
 </head>
-<body class = "root">
-  <div class = "page">
-    <header class = "header">
-      <img class = "header__logo" src = "./images/header__logo.svg" alt = "логотип место">
-      <div class = "header__line"></div>
+<body class="root">
+  <div class="page">
+    <header class="header">
+      <img class="header__logo" src="./images/header__logo.svg" alt="логотип место">
     </header>
 
-    <main class = "main">
-      <section class = "profile">
-        <img class = "profile__avatar" src = "./images/profile__avatar.jpg" alt = "автарка профиля">
-        <div class = "profile__info">
-          <h1 class = "profile__name">Жак-Ив Кусто</h1>
-          <button class = "profile__edit-button"></button>
-          <p class = "profile__description">Исследователь океана</p>
+    <main class="main">
+      <section class="profile">
+        <img class="profile__avatar" src="./images/profile__avatar.jpg" alt="автарка профиля">
+        <div class="profile__info">
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <button class="profile__edit-button" type="button"></button>
+          <p class="profile__description">Исследователь океана</p>
         </div>
-        <button class = "profile__add-button"></button>
+        <button class="profile__add-button" type="button"></button>
       </section>
 
-      <section class = "elements">
-        <div class = "elements__element">
-          <img class = "elements__photo" src = "./images/1.jpg" alt = "">
-          <div class = "elements__info">
-            <p class = "elements__title">Карачаевск</p>
-            <button class = "elements__like-button"></button>
+      <section class="elements">
+        <article class="elements__element">
+          <img class="elements__photo" src="./images/1.jpg" alt="">
+          <div class="elements__info">
+            <h2 class="elements__title">Карачаевск</h2>
+            <button class="elements__like-button" type="button"></button>
           </div>
-        </div>
-        <div class = "elements__element">
-          <img class = "elements__photo" src = "./images/2.jpg" alt = "">
-          <div class = "elements__info">
-            <p class = "elements__title">Гора Эльбрус</p>
-            <button class = "elements__like-button"></button>
+        </article>
+        <article class="elements__element">
+          <img class="elements__photo" src="./images/2.jpg" alt="">
+          <div class="elements__info">
+            <h2 class="elements__title">Гора Эльбрус</h2>
+            <button class="elements__like-button" type="button"></button>
           </div>
-        </div>
-        <div class = "elements__element">
-          <img class = "elements__photo" src = "./images/3.jpg" alt = "">
-          <div class = "elements__info">
-            <p class = "elements__title">Домбай</p>
-            <button class = "elements__like-button"></button>
+        </article>
+        <article class="elements__element">
+          <img class="elements__photo" src="./images/3.jpg" alt="">
+          <div class="elements__info">
+            <h2 class="elements__title">Домбай</h2>
+            <button class="elements__like-button" type="button"></button>
           </div>
-        </div>
-        <div class = "elements__element">
-          <img class = "elements__photo" src = "./images/4.jpg" alt = "">
-          <div class = "elements__info">
-            <p class = "elements__title">Гора Эльбрус</p>
-            <button class = "elements__like-button"></button>
+        </article>
+        <article class="elements__element">
+          <img class="elements__photo" src="./images/4.jpg" alt="">
+          <div class="elements__info">
+            <h2 class="elements__title">Гора Эльбрус</h2>
+            <button class="elements__like-button" type="button"></button>
           </div>
-        </div>
-        <div class = "elements__element">
-          <img class = "elements__photo" src = "./images/5.jpg" alt = "">
-          <div class = "elements__info">
-            <p class = "elements__title">Домбай</p>
-            <button class = "elements__like-button"></button>
+        </article>
+        <article class="elements__element">
+          <img class="elements__photo" src="./images/5.jpg" alt="">
+          <div class="elements__info">
+            <h2 class="elements__title">Домбай</h2>
+            <button class="elements__like-button" type="button"></button>
           </div>
-        </div>
-        <div class = "elements__element">
-          <img class = "elements__photo" src = "./images/6.jpg" alt = "">
-          <div class = "elements__info">
-            <p class = "elements__title">Карачаево-Черкесия</p>
-            <button class = "elements__like-button"></button>
+        </article>
+        <article class="elements__element">
+          <img class="elements__photo" src="./images/6.jpg" alt="">
+          <div class="elements__info">
+            <h2 class="elements__title">Карачаево-Черкесия</h2>
+            <button class="elements__like-button" type="button"></button>
           </div>
-        </div>
-      </section>
-
-      <section class = "popup">
-        <div class = "popup__container">
-          <img class = "popup__close" src = "./images/popup__close.svg" alt = "крестик">
-          <form class = "popup__form">
-            <h2 class = "popup__title">Редактировать профиль</h2>
-            <fieldset class = "popup__form-item">
-              <input class = "popup__form-name" type = "text" placeholder = "Имя" 
-                value = "Жак-Ив Кусто">
-              <input class = "popup__form-description" type = "text" placeholder = "О себе"
-                value = "Исследователь океана">
-            </fieldset>
-            <button class = "popup__save-button">Сохранить</button>
-          </form>
-        </div>
+        </article>
       </section>
     </main>
 
-    <footer class = "footer">
-      <p class = "footer__copyright">&#169; 2022. Катя Павлова</p>
+    <section class="popup">
+      <div class="popup__container">
+        <button class="popup__close" type="button"></button>
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form class="popup__form" name="profile__form">
+          <fieldset class="popup__form-item">
+            <input class="popup__input-text popup__input-text_type_name" type="text" placeholder="Имя" 
+              value="Жак-Ив Кусто" name="name__input">
+            <input class="popup__input-text popup__input-text_type_description" type="text" placeholder="О себе"
+              value="Исследователь океана" name="description__input">
+          </fieldset>
+          <button class="popup__save-button" type="submit">Сохранить</button>
+        </form>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <p class="footer__copyright">&#169; 2022. Катя Павлова</p>
     </footer>
   </div>
-  <script src = "script.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
