--- a/index.html
+++ b/index.html
@@ -25,42 +25,42 @@
 
       <section class="elements">
         <article class="elements__element">
-          <img class="elements__photo" src="./images/1.jpg" alt="">
+          <img class="elements__photo" src="./images/1.jpg" alt="монастырь в горах">
           <div class="elements__info">
             <h2 class="elements__title">Карачаевск</h2>
             <button class="elements__like-button" type="button"></button>
           </div>
         </article>
         <article class="elements__element">
-          <img class="elements__photo" src="./images/2.jpg" alt="">
+          <img class="elements__photo" src="./images/2.jpg" alt="горы на закате">
           <div class="elements__info">
             <h2 class="elements__title">Гора Эльбрус</h2>
             <button class="elements__like-button" type="button"></button>
           </div>
         </article>
         <article class="elements__element">
-          <img class="elements__photo" src="./images/3.jpg" alt="">
+          <img class="elements__photo" src="./images/3.jpg" alt="горы и лес">
           <div class="elements__info">
             <h2 class="elements__title">Домбай</h2>
             <button class="elements__like-button" type="button"></button>
           </div>
         </article>
         <article class="elements__element">
-          <img class="elements__photo" src="./images/4.jpg" alt="">
+          <img class="elements__photo" src="./images/4.jpg" alt="горы на закате">
           <div class="elements__info">
             <h2 class="elements__title">Гора Эльбрус</h2>
             <button class="elements__like-button" type="button"></button>
           </div>
         </article>
         <article class="elements__element">
-          <img class="elements__photo" src="./images/5.jpg" alt="">
+          <img class="elements__photo" src="./images/5.jpg" alt="горы и лес">
           <div class="elements__info">
             <h2 class="elements__title">Домбай</h2>
             <button class="elements__like-button" type="button"></button>
           </div>
         </article>
         <article class="elements__element">
-          <img class="elements__photo" src="./images/6.jpg" alt="">
+          <img class="elements__photo" src="./images/6.jpg" alt="монастырь в горах">
           <div class="elements__info">
             <h2 class="elements__title">Карачаево-Черкесия</h2>
             <button class="elements__like-button" type="button"></button>
