Добавила кнопку корзины

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <section class="elements">
         <article class="elements__element">
           <img class="elements__photo" src="./images/1.jpg" alt="монастырь в горах">
+          <button class="elements__delete-button" type="button"></button>
           <div class="elements__info">
             <h2 class="elements__title">Карачаевск</h2>
             <button class="elements__like-button" type="button"></button>
@@ -33,6 +34,7 @@
         </article>
         <article class="elements__element">
           <img class="elements__photo" src="./images/2.jpg" alt="горы на закате">
+          <button class="elements__delete-button" type="button"></button>
           <div class="elements__info">
             <h2 class="elements__title">Гора Эльбрус</h2>
             <button class="elements__like-button" type="button"></button>
@@ -40,6 +42,7 @@
         </article>
         <article class="elements__element">
           <img class="elements__photo" src="./images/3.jpg" alt="горы и лес">
+          <button class="elements__delete-button" type="button"></button>
           <div class="elements__info">
             <h2 class="elements__title">Домбай</h2>
             <button class="elements__like-button" type="button"></button>
@@ -47,6 +50,7 @@
         </article>
         <article class="elements__element">
           <img class="elements__photo" src="./images/4.jpg" alt="горы на закате">
+          <button class="elements__delete-button" type="button"></button>
           <div class="elements__info">
             <h2 class="elements__title">Гора Эльбрус</h2>
             <button class="elements__like-button" type="button"></button>
@@ -54,6 +58,7 @@
         </article>
         <article class="elements__element">
           <img class="elements__photo" src="./images/5.jpg" alt="горы и лес">
+          <button class="elements__delete-button" type="button"></button>
           <div class="elements__info">
             <h2 class="elements__title">Домбай</h2>
             <button class="elements__like-button" type="button"></button>
@@ -61,6 +66,7 @@
         </article>
         <article class="elements__element">
           <img class="elements__photo" src="./images/6.jpg" alt="монастырь в горах">
+          <button class="elements__delete-button" type="button"></button>
           <div class="elements__info">
             <h2 class="elements__title">Карачаево-Черкесия</h2>
             <button class="elements__like-button" type="button"></button>
@@ -84,6 +90,8 @@
         </form>
       </div>
     </section>
+
+
 
     <footer class="footer">
       <p class="footer__copyright">&#169; 2022. Катя Павлова</p>
