--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
       </section>
     </main>
 
-    <section class="popup">
+    <section class="popup" id="popup__edit">
       <div class="popup__container">
-        <button class="popup__close" type="button"></button>
+        <button class="popup__close" id="popup__close-edit" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" name="profile__form">
           <fieldset class="popup__form-item">
@@ -91,7 +91,21 @@
       </div>
     </section>
 
-
+    <section class="popup" id="popup__add">
+      <div class="popup__container">
+        <button class="popup__close" id="popup__close-add" type="button"></button>
+        <h2 class="popup__title">Новое место</h2>
+        <form class="popup__form" name="profile__form">
+          <fieldset class="popup__form-item">
+            <input class="popup__input-text popup__input-text_type_place" type="text" placeholder="Название" 
+              value="" name="place__input">
+            <input class="popup__input-text popup__input-text_type_link" type="text" 
+              placeholder="Ссылка на картинку" value="" name="link__input">
+          </fieldset>
+          <button class="popup__save-button" type="submit">Создать</button>
+        </form>
+      </div>
+    </section>
 
     <footer class="footer">
       <p class="footer__copyright">&#169; 2022. Катя Павлова</p>
