--- a/index.html
+++ b/index.html
@@ -24,54 +24,6 @@
       </section>
 
       <section class="elements">
-        <article class="elements__element">
-          <img class="elements__photo" src="./images/1.jpg" alt="монастырь в горах">
-          <button class="elements__delete-button" type="button"></button>
-          <div class="elements__info">
-            <h2 class="elements__title">Карачаевск</h2>
-            <button class="elements__like-button" type="button"></button>
-          </div>
-        </article>
-        <article class="elements__element">
-          <img class="elements__photo" src="./images/2.jpg" alt="горы на закате">
-          <button class="elements__delete-button" type="button"></button>
-          <div class="elements__info">
-            <h2 class="elements__title">Гора Эльбрус</h2>
-            <button class="elements__like-button" type="button"></button>
-          </div>
-        </article>
-        <article class="elements__element">
-          <img class="elements__photo" src="./images/3.jpg" alt="горы и лес">
-          <button class="elements__delete-button" type="button"></button>
-          <div class="elements__info">
-            <h2 class="elements__title">Домбай</h2>
-            <button class="elements__like-button" type="button"></button>
-          </div>
-        </article>
-        <article class="elements__element">
-          <img class="elements__photo" src="./images/4.jpg" alt="горы на закате">
-          <button class="elements__delete-button" type="button"></button>
-          <div class="elements__info">
-            <h2 class="elements__title">Гора Эльбрус</h2>
-            <button class="elements__like-button" type="button"></button>
-          </div>
-        </article>
-        <article class="elements__element">
-          <img class="elements__photo" src="./images/5.jpg" alt="горы и лес">
-          <button class="elements__delete-button" type="button"></button>
-          <div class="elements__info">
-            <h2 class="elements__title">Домбай</h2>
-            <button class="elements__like-button" type="button"></button>
-          </div>
-        </article>
-        <article class="elements__element">
-          <img class="elements__photo" src="./images/6.jpg" alt="монастырь в горах">
-          <button class="elements__delete-button" type="button"></button>
-          <div class="elements__info">
-            <h2 class="elements__title">Карачаево-Черкесия</h2>
-            <button class="elements__like-button" type="button"></button>
-          </div>
-        </article>
       </section>
     </main>
 
@@ -79,7 +31,7 @@
       <div class="popup__container">
         <button class="popup__close" id="popup__close-edit" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="profile__form">
+        <form class="popup__form" id="profile__form" name="profile__form">
           <fieldset class="popup__form-item">
             <input class="popup__input-text popup__input-text_type_name" type="text" placeholder="Имя" 
               value="Жак-Ив Кусто" name="name__input">
@@ -95,7 +47,7 @@
       <div class="popup__container">
         <button class="popup__close" id="popup__close-add" type="button"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form" name="profile__form">
+        <form class="popup__form" id="place__form" name="place__form">
           <fieldset class="popup__form-item">
             <input class="popup__input-text popup__input-text_type_place" type="text" placeholder="Название" 
               value="" name="place__input">
@@ -106,6 +58,17 @@
         </form>
       </div>
     </section>
+
+    <template id="card">
+      <article class="elements__element" id="element">
+        <img class="elements__photo" id="photo" src="" alt="">
+        <button class="elements__delete-button" type="button"></button>
+        <div class="elements__info">
+          <h2 class="elements__title" id="title"></h2>
+          <button class="elements__like-button" type="button"></button>
+        </div>
+      </article>
+    </template>
 
     <footer class="footer">
       <p class="footer__copyright">&#169; 2022. Катя Павлова</p>
