--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <button class="elements__delete-button" type="button"></button>
         <div class="elements__info">
           <h2 class="elements__title" id="title"></h2>
-          <button class="elements__like-button" type="button"></button>
+          <button class="elements__like-button" id="like" type="button"></button>
         </div>
       </article>
     </template>
