feat: теперь карточки можно удалять по клику на корзину

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <template id="card">
       <article class="elements__element" id="element">
         <img class="elements__photo" id="photo" src="" alt="">
-        <button class="elements__delete-button" type="button"></button>
+        <button class="elements__delete-button" id="delete" type="button"></button>
         <div class="elements__info">
           <h2 class="elements__title" id="title"></h2>
           <button class="elements__like-button" id="like" type="button"></button>
