--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </section>
     </main>
 
-    <section class="popup" id="popup__edit">
+    <section class="popup" id="popup-edit">
       <div class="popup__container">
         <button class="popup__close" id="popup__close-edit" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
@@ -43,7 +43,7 @@
       </div>
     </section>
 
-    <section class="popup" id="popup__add">
+    <section class="popup" id="popup-add">
       <div class="popup__container">
         <button class="popup__close" id="popup__close-add" type="button"></button>
         <h2 class="popup__title">Новое место</h2>
@@ -59,12 +59,20 @@
       </div>
     </section>
 
+    <section class="popup popup_type_img" id="popup-img">
+      <div class="popup__container popup__container_type_img">
+        <img class="popup__image" id="img" src="" alt="">
+        <h2 class="popup__title popup__title_type_img" id="title"></h2>
+        <button class="popup__close" id="close" type="button"></button>
+      </div>
+    </section>
+
     <template id="card">
       <article class="elements__element" id="element">
         <img class="elements__photo" id="photo" src="" alt="">
         <button class="elements__delete-button" id="delete" type="button"></button>
         <div class="elements__info">
-          <h2 class="elements__title" id="title"></h2>
+          <h2 class="elements__title" id="place"></h2>
           <button class="elements__like-button" id="like" type="button"></button>
         </div>
       </article>
