--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <section class="popup popup_type_img" id="popup-img">
       <div class="popup__container popup__container_type_img">
-        <img class="popup__image" id="img" src="" alt="">
+        <img class="popup__image" id="img" src="./" alt="">
         <h2 class="popup__title popup__title_type_img" id="title"></h2>
         <button class="popup__close" id="close" type="button"></button>
       </div>
@@ -69,7 +69,7 @@
 
     <template id="card">
       <article class="elements__element" id="element">
-        <img class="elements__photo" id="photo" src="" alt="">
+        <img class="elements__photo" id="photo" src="./" alt="">
         <button class="elements__delete-button" id="delete" type="button"></button>
         <div class="elements__info">
           <h2 class="elements__title" id="place"></h2>
