fix: исправила замечаниея ревьюера

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="popup__container">
         <button class="popup__close" id="popup__close-edit" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" id="profile__form" name="profile__form">
+        <form class="popup__form" id="profile__form" name="profile-form">
           <fieldset class="popup__form-item">
             <input class="popup__input-text popup__input-text_type_name" type="text" placeholder="Имя" 
               value="Жак-Ив Кусто" name="name__input">
@@ -47,7 +47,7 @@
       <div class="popup__container">
         <button class="popup__close" id="popup__close-add" type="button"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form" id="place__form" name="place__form">
+        <form class="popup__form" id="place__form" name="place-form">
           <fieldset class="popup__form-item">
             <input class="popup__input-text popup__input-text_type_place" type="text" placeholder="Название" 
               value="" name="place__input">
