--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
       <div class="popup__container">
         <button class="popup__close" id="popup__close-edit" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" id="profile__form" name="profile-form">
+        <form class="popup__form" id="profile__form" name="profile-form" novalidate>
           <fieldset class="popup__form-item">
-            <input class="popup__input-text popup__input-text_type_name" type="text" placeholder="Имя" 
-              value="Жак-Ив Кусто" name="name__input" minlength="2" maxlength="40" required id="name-input">
-            <span class="popup__input-error"></span>
-            <input class="popup__input-text popup__input-text_type_description" type="text" placeholder="О себе"
-              value="Исследователь океана" name="description__input" minlength="2" maxlength="200" required
-                id="description-input">
-            <span class="popup__input-error"></span>
+            <input class="popup__input-text popup__input-text_type_name" id="name-input" name="name__input" 
+              placeholder="Имя" value="Жак-Ив Кусто" type="text" minlength="2" maxlength="40" required>
+            <span class="popup__input-error" id="name-input-error"></span>
+            <input class="popup__input-text popup__input-text_type_description" id="description-input" 
+              name="description__input" placeholder="О себе" value="Исследователь океана" type="text" 
+                minlength="2" maxlength="200" required>
+            <span class="popup__input-error" id="description-input-error"></span>
           </fieldset>
           <button class="popup__save-button" type="submit">Сохранить</button>
         </form>
@@ -50,16 +50,16 @@
       <div class="popup__container">
         <button class="popup__close" id="popup__close-add" type="button"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form" id="place__form" name="place-form">
+        <form class="popup__form" id="place__form" name="place-form" novalidate>
           <fieldset class="popup__form-item">
-            <input class="popup__input-text popup__input-text_type_place" type="text" placeholder="Название" 
-              value="" name="place__input" id="place-input" required minlength="2" maxlength="30">
-            <span class="popup__input-error"></span>
-            <input class="popup__input-text popup__input-text_type_link" type="url" 
-              placeholder="Ссылка на картинку" value="" name="link__input" id="link-input" required>
-            <span class="popup__input-error popup__input-error_type_url"></span>
+            <input class="popup__input-text popup__input-text_type_place" id="place-input" name="place__input"
+              placeholder="Название" value="" type="text" minlength="2" maxlength="30" required>
+            <span class="popup__input-error" id="place-input-error"></span>
+            <input class="popup__input-text popup__input-text_type_link" id="link-input" name="link__input"
+              placeholder="Ссылка на картинку" value="" type="url" required>
+            <span class="popup__input-error" id="link-input-error"></span>
           </fieldset>
-          <button class="popup__save-button" type="submit">Создать</button>
+          <button class="popup__save-button popup__save-button_disabled" type="submit" disabled>Создать</button>
         </form>
       </div>
     </section>
@@ -88,5 +88,6 @@
     </footer>
   </div>
   <script src="./scripts/index.js"></script>
+  <script src="./scripts/validate.js"></script>
 </body>
 </html>
